# minidb

./: CMakeLists.txt
src/: main.cpp
